fix banner overlay on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -566,7 +566,7 @@ span {
 }
 
 .home-header-grid img {
-  margin-top: 130px;
+  margin-top: 160px;
 }
 
 .home-header-grid h1 {
